# event_manager

./: README.md
event_manager/: CMakeLists.txt
event_manager/events/: CMakeLists.txt
event_manager/events/inc/: event_manager_events.h
event_manager/inc/: event_manager.h
event_manager/posix/queue/: CMakeLists.txt
event_manager/posix/queue/inc/: event_manager_queue.h
event_manager/posix/queue/src/: event_manager_queue.c
event_manager/posix/tasks/: CMakeLists.txt
event_manager/posix/tasks/inc/: event_manager_tasks.h
event_manager/posix/tasks/src/: event_manager_tasks.c
event_manager/src/: event_manager.c  event_manager_dynamic.c  event_manager_static.c
examples/: CMakeLists.txt  two_tasks_subscribe.c
